Implemented final comments Added mesh of MCMC mean results model Added MCMC results covariance matrix to appendix; awkward to try to fit in conclusion

--- a/Apendice/ModeloComputacionalGraficasAdicionales.tex
+++ b/Apendice/ModeloComputacionalGraficasAdicionales.tex
@@ -76,3 +76,11 @@
     mancha en la superficie de la componente secundaria
     \code{radius@secondary\_spot} y su latitud \code{colat@secondary\_spot}.}
 \end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=1\linewidth]{Apendice/Figures/Figura ZTF MCMC Covarianzas.png}
+    \caption{Matriz de covarianza entre los parámetros muestreados. Se muestra
+    solo una diagonal por brevedad.}
+    \label{figuraMcmcCovarianzas}
+\end{figure}
