--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -4,7 +4,8 @@
 
 \chapter{Conclusiones}
 
-Se ha presentado la búsqueda de sistemas binarios eclipsantes dentro del
+Se ha presentado la metodología para la búsqueda de sistemas binarios 
+eclipsantes dentro del
 catálogo de Gaia DR3 con el objetivo de realizar una campaña de observación
 fotométrica desde el Observatorio Astronómico Universitario en Iturbide, N.L.
 \atoObjId fue elegido como el objetivo de interés debido a su clasificación como
@@ -17,12 +18,12 @@ factibilidad de campañas de observación de sistemas binarios tenues desde el
 OAU-Iturbide.
 
 Para complementar los datos disponibles de \atoObjId se obtuvieron curvas
-fotométricas adicionales obtenidas de los catálogos de ZTF DR20 y Gaia DR3 con
-el objetivo de realizar un estudio fotométrico particular del objeto de interés.
-Primero se encontró el periodo orbital del sistema de $8.00558 \pm 0.00013 \
-\mathrm{h}$. Partiendo del corto periodo orbital del sistema junto a la
-morfología aparente de las curvas de luz en fase se ajustó un modelo de un
-sistema binario eclipsante en contacto utilizando PHOEBE, del cual al final se
+fotométricas adicionales de los catálogos de ZTF DR20 y Gaia DR3 con el objetivo
+de realizar un estudio fotométrico particular del objeto de interés. Primero se
+encontró el periodo orbital del sistema de $8.00558 \pm 0.00013 \ \mathrm{h}$.
+Partiendo del corto periodo orbital del sistema junto a la morfología por
+inspección visual de las curvas de luz en fase se ajustó un modelo de un sistema
+binario eclipsante en contacto utilizando PHOEBE, del cual al final se
 obtuvieron una parte de los parámetros fundamentales estelares y orbitales del
 sistema, descritos en la
 \refthesissection{metodologia:modelocomputacional:resultados}. Algunas
