--- a/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
+++ b/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
@@ -19,7 +19,7 @@ describe la variabilidad en común de todas las bandas en las que se observó el
 sistema, y a este le suma un modelo de ajustes de Fourier truncados para cada
 banda individual, el cual ajusta la variabilidad vista en los residuos del
 ajuste del término en común
-[\citeyearparen{vanderplas_periodograms_lombscargle_multiband_2015}]. Usando un
+(\citeyearparen{vanderplas_periodograms_lombscargle_multiband_2015}). Usando un
 mallado suficientemente fino para explorar el espacio de frecuencias se puede
 encontrar la frecuencia de mayor potencia, indicando el periodo orbital del
 sistema; al mismo tiempo, para restringir esta malla de periodos se impuso un
