--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -42,7 +42,7 @@ base a su distribución de energía espectral (SED). Este dato permite el ajuste
 de la temperatura efectiva del sistema sin necesidad de acudir a una estimación
 a priori basado en relaciones analíticas o estadísticas con respecto a otros
 parámetros del modelo
-[\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{5.1.2.2}]. A la
+(\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{5.1.2.2}). A la
 vez, al tener una manera concreta de evaluar de manera directa la temperatura
 efectiva del sistema es posible conocer la incertidumbre utilizando solo datos
 fotométricos. Para obtener el flujo normalizado de las curvas de ZTF se utilizó
