--- a/Muestra/Secciones/Catalogos.tex
+++ b/Muestra/Secciones/Catalogos.tex
@@ -11,7 +11,7 @@ previamente. Para lograr esto se utiliza un satélite espacial, el cual está
 denominado como \textit{Gaia}, ubicado en el punto de Lagrange L2 con respecto al
 sistema Sol-Tierra. Desde este punto el satélite tiene una vista sin obstrucciones
 que le permite observar una cantidad impresionante de objetos, con \textapproxtilde
-1,000 millones de fuentes visibles. [\citeyearparen{gaiaMission}] 
+1,000 millones de fuentes visibles. (\citeyearparen{gaiaMission}) 
 
 \subsection{Data Release 3}
 
@@ -115,7 +115,7 @@ otras galaxias y planetas gaseosos extra-solares.
 \section{Zwicky Transient Facility}
 
 El censo observacional \textbf{Zwicky Transient Facility} (\textbf{ZTF})
-[\citeyearparen{bellm_ztf_overview_performance_first_results_2018}] tiene como
+(\citeyearparen{bellm_ztf_overview_performance_first_results_2018}) tiene como
 objetivo observar el cielo del hemisferio norte con una cadencia no realizada
 antes por su predecesor el \textit{Palomar Transient Factory}. Las observaciones
 de ZTF se hacen desde el \textit{Observatorio Palomar}, ubicado en San Diego,
