--- a/Muestra/Secciones/CriteriosDeSeleccion.tex
+++ b/Muestra/Secciones/CriteriosDeSeleccion.tex
@@ -100,7 +100,7 @@ los \num{1811709771} objetos reportados en el DR3 de Gaia.
 	\caption{Relación empírica entre las magnitudes reportadas en GDR3 y SDSS12.
 	Las relaciones están dadas para 3 de las 5 bandas de SDSS12, debido a las
 	diferencias entre las pasa bandas de Gaia y SDSS.
-	\citeyearparen{gdr3ReleaseDocumentation}}
+	(\citeyearparen{gdr3ReleaseDocumentation})}
 	\label{gdr3SdssConversionGraphs}
 \end{figure}
 
@@ -111,7 +111,7 @@ importante en la viabilidad de una campaña de observación desde el OAU. Esto
 determina si un objeto es visible desde la locación geográfica del observatorio
 durante las fechas de observación; de otra manera sería imposible apuntar un
 telescopio al sistema. Para realizar esta tarea se utilizaron los módulos de
-\code{astroplan} \citeyearparen{astroplan} y \code{astropy} \citeyearparen{astropy}, aplicando
+\code{astroplan} (\citeyearparen{astroplan}) y \code{astropy} (\citeyearparen{astropy}), aplicando
 el algoritmo a los objetos resultados de la búsqueda en la base de datos de
 Gaia. El código responsable se encuentra en el archivo
 \href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/obsrv_plan/gaia/observable_targets.py}{\code{observable\_targets.py}}.
@@ -121,7 +121,7 @@ Gaia. El código responsable se encuentra en el archivo
 Una vez obtenidos los objetos de interés de la selección de objetos visibles se
 utilizó la base de datos de
 SIMBAD\footnote{\url{http://simbad.cds.unistra.fr/simbad/}}
-\citeyearparen{simbadDatabase} para restringir los objetos de interés a un
+(\citeyearparen{simbadDatabase}) para restringir los objetos de interés a un
 tamaño manejable, con el objetivo de obtener un sistema clasificado como
 variable cataclísmica, binaria eclipsante, o candidata a alguna de estas
 clasificaciones. Uno de los objetivos de este trabajo de tesis fue realizar una
@@ -154,7 +154,7 @@ Astronómico Universitario} en Iturbide, N.L., descrito en la
 	incluyendo sistemas de tipo \textit{variable cataclísmica} (\code{CataclyV*}
 	y las candidatas \code{CataclyV*\_Candidate}), un tipo en particular de
 	sistemas binarios en semi contacto
-	\citeyearparen{smith_cataclysmic_variables_review_2007}. Varias
+	(\citeyearparen{smith_cataclysmic_variables_review_2007}). Varias
 	clasificaciones de baja importancia quedan agrupadas en la categoría
 	\code{Misc.} por brevedad.}
 	\label{figuraBusquedaSimbadHistograma}
@@ -220,7 +220,7 @@ parámetro por medio del muestreo del espacio de parámetros libres.
 	de eclipses en el sistema binario. Las tres curvas de luz corresponden a
 	cada pasabanda de la misión de Gaia: verde es la banda $G$, en azul la banda
 	$G_{BP}$, y en rojo la banda $G_{RP}$.
-	[\citeyearparen{gdr3ReleaseDocumentation}]}
+	(\citeyearparen{gdr3ReleaseDocumentation})}
 	\label{gdr3AtoObjLightCurves}
 \end{figure}
 
