--- a/Observaciones/Secciones/Fotometria.tex
+++ b/Observaciones/Secciones/Fotometria.tex
@@ -78,7 +78,7 @@ utilizando el equipo de OAU se puede ver en la \reffigure{figuraCcdCampo}.
 La limpieza de las imágenes incluyó la corrección de bias, darks, y flats por
 medio de imágenes de calibración, las cuales fueron tomadas cada noche de
 observación. Esto fue realizado utilizando tareas standard de IRAF
-[\citeyearparen{tody_iraf_1986}]. Cada imagen fue revisada manualmente para
+(\citeyearparen{tody_iraf_1986}). Cada imagen fue revisada manualmente para
 determinar si era de suficiente calidad para hacer una medición adecuada. Se
 analizó la forma que proyecta el objeto en la imagen del CCD; solo las imágenes
 cuyo perfil se aproxima a un circulo fueron aceptadas para realizar el proceso
@@ -99,7 +99,7 @@ facilitando la fotometría por apertura. Utilizando el script
 \href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/iturbide/shift_images.py}{\code{shift\_images.py}}
 se ejecutó una tarea de \textit{plate solving} para cada imagen calibrada; el
 proceso de \textit{plate solve}, llevado a cabo utilizando el programa
-\textit{Astrometry} [\citeyearparen{astrometry}], toma como referencia estrellas
+\textit{Astrometry} (\citeyearparen{astrometry}), toma como referencia estrellas
 dentro del campo de la imagen comparando contra una base de datos pre-definida
 para determinar las coordenadas físicas que corresponden a una imagen. Esta
 información va encapsulada dentro de los metadatos del archivo FITS, conocido
