--- a/Tesis.tex
+++ b/Tesis.tex
@@ -297,7 +297,8 @@
 
 \begin{document}
 
-\def\titulo{Búsqueda y Estudio Fotométrico de Sistemas Binarios Eclipsantes}
+% \def\titulo{Búsqueda y Estudio Fotométrico de Sistemas Binarios Eclipsantes}
+\def\titulo{Búsqueda de Sistemas Binarios Eclipsantes y Estudio Fotométrico de \atoObjId}
 \def\autor{Ramón Caballero Villegas}
 \def\matricula{2125383}
 \def\grado{Maestría en Astrofísica Planetaria y Tecnologías Afines}
@@ -443,14 +444,16 @@ El Comité de Tesis\\
 
 % ------------------------------------DEDICATION
 % \restoregeometry
-% \vspace*{5cm}
-% \begin{flushright}
-%   {\parbox{4.2cm}{\textit{Dedication...}}}
-% \end{flushright}
+\vspace*{5cm}
+\begin{flushright}
+  {\parbox{4.2cm}{\textit{Dedication...}}}
 
-% \thispagestyle{empty}
+  {\parbox{4.2cm}{\textit{Dedication...}}}
+\end{flushright}
+
+\thispagestyle{empty}
 % ------------------------------------
-%\newpage
+\newpage
 %-------------------------------------ABSTRACT
 \include{Resumen}
 %-------------------------------------INDEX
