--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -13,7 +13,7 @@ esférica de la estrella; esto se le conoce como el \textit{equilibrio
 hidrostático}, en el cual la presión interna de la estrella tiene una
 contra-fuerza equivalente del peso de su mismo gas. Este balance es modelado a
 escalas menores a las de las propiedades macroscópicas de la estrella
-\citetbookchapter{anIntroTheoryStellarStructureEvolution}{2}, en la cual la
+(\citetbookchapter{anIntroTheoryStellarStructureEvolution}{2}), en la cual la
 estrella está en un estado de \textit{equilibrio termodinámico local}. 
 
 Una estrella está caracterizada por sus propiedades físicas, como su masa,
@@ -46,7 +46,7 @@ compresiva de gravedad, en donde la nube deja de contraerse. Dependiendo de la
 temperatura a la que alcanza el núcleo determina si se convierte en una estrella
 capaz de mantener una reacción continua de fusión nuclear. La masa mínima para
 que una nube molecular colapse a una estrella es de $0.08 \ \mathrm{M}_{\odot}$
-\citetbookchapter{anIntroStellarAstro}{2}. De no cumplir con esta condición, el
+(\citetbookchapter{anIntroStellarAstro}{2}). De no cumplir con esta condición, el
 cúmulo de gas y polvo no logrará mantener la cadena de reacciones termonucleares
 en su núcleo, resultando en una \textit{enana café}, un objeto inerte resultado
 del proceso fallido de formación estelar.
@@ -55,7 +55,7 @@ Una vez que el material de la nube se estabilice\textemdash una vez que el
 objeto empiece a producir energía de orden de magnitud estelar\textemdash nace
 una \textbf{protoestrella}. Estos objetos extensos (aproximadamente $500 \
 \mathrm{R}_{\odot}$ para una protoestrella de $1 \ \mathrm{M}_{\odot}$
-\citetbookchapter{astronomyPhysicalPerspective}{15}) se mantienen a una baja
+(\citetbookchapter{astronomyPhysicalPerspective}{15})) se mantienen a una baja
 temperatura durante esta etapa de su vida, alrededor de 2500 K en su superficie.
 Sin embargo, debido a la alta densidad, la nube no es completamente
 transparente, por lo cual solo la superficie es capaz de liberar energía por
@@ -154,7 +154,7 @@ estrella. En el caso de que el camino libre medio sea significativamente menor
 que las dimensiones espaciales de la estrella su volumen se puede dividir en
 celdas discretas de tamaño despreciable, en las cuales cada una de las celdas
 está en equilibrio termodinámico dentro de si mismas
-\citetbookchapter{anIntroTheoryStellarStructureEvolution}{2}. Por lo tanto, la
+(\citetbookchapter{anIntroTheoryStellarStructureEvolution}{2}). Por lo tanto, la
 estructura de la estrella se puede determinar siempre y cuando se sepa la masa
 de la estrella, y la densidad, temperatura, y composición química de cada punto
 en su interior.
@@ -173,7 +173,7 @@ temperatura, por lo cual la \textbf{distribución de energía espectral}
 Un \textbf{cuerpo negro} es aquel objeto que se encuentra en un estado de
 equilibrio termodinámico con su ambiente, absorbiendo energía (en el caso de una
 estrella esta sería por medio de radiación) a la misma tasa que la emite
-\citetbookchapter{astronomyPhysicalPerspective}{2}. El espectro de un cuerpo
+(\citetbookchapter{astronomyPhysicalPerspective}{2}). El espectro de un cuerpo
 negro está descrito por la función de Planck
 (\refequation{blackbodyPlanckEquation}), de la cual obtenemos la intensidad para
 cada longitud de onda dada la temperatura del cuerpo negro. La distribución
@@ -218,7 +218,7 @@ solares), dando como resultado el espectro de la estrella.
 
 Entre los códigos de modelos de atmósferas estelares más utilizados está el de
 \code{ATLAS} escrito por Robert L. Kurucz. A continuación se especifican las
-suposiciones empleadas en el código de \code{ATLAS} descritas en
+suposiciones empleadas en el código de \code{ATLAS} descritas por
 \citetbooksection{phoebeScientificReference}{4.2}; para una discusión completa
 del programa es necesario hacer referencia a \citeyearparen{kurucz_atlas_1970}.
 
