--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -235,7 +235,7 @@ sistema:
 Notando que el origen del sistema de coordenadas está ubicada en la posición de
 la componente $m_1$. Por lo tanto, el potencial es definido con respecto a
 $m_1$; para obtener el potencial con respecto a $m_2$ es necesario hacer una
-transformación descrita en \citetbooksection{phoebeScientificReference}{3.1}.
+transformación descrita por \citetbooksection{phoebeScientificReference}{3.1}.
 Sustituyendo las ecuaciones \refequations{ecuacionesDistancias} en la expresión
 del potencial $\psi$ se obtiene el potencial efectivo en coordenadas esféricas:
 
@@ -327,12 +327,12 @@ astrofísico debe de cumplir con las siguientes condiciones:
 	imbalances locales padecen de una distorsión anisótropo, el cual causa que
 	la superficie estelar se desvíe del modelo de Roche. Sin embargo, en la
 	mayoría de las estrellas estas oscilaciones no-radiales ocurren en el orden
-	de la escala de tiempo hidrostática, la cual, por ejemplo, es de ~15 minutos
-	para una estrella tipo solar
-	\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}. Mientras
-	la escala de tiempo de estas distorsiones sea despreciable con respecto al
-	periodo orbital la superficie estelar (su fotósfera) se puede parametrizar
-	con el modelo de Roche.
+	de la escala de tiempo hidrostática, la cual, por ejemplo, es de
+	\textapproxtilde 15 minutos para una estrella tipo solar
+	(\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}).
+	Mientras la escala de tiempo de estas distorsiones sea despreciable con
+	respecto al periodo orbital la superficie estelar (su fotósfera) se puede
+	parametrizar con el modelo de Roche.
 
 	\item[Alta densidad de masa -] A pesar de que el material de una estrella
 	esté distribuido por todo su volumen, el modelo de Roche simplifica la
@@ -341,7 +341,7 @@ astrofísico debe de cumplir con las siguientes condiciones:
 	sin masa, cuya forma es dictada por el potencial de Roche. Esta aproximación
 	permite derivar la expresión analítica en la \refequation{ecuacionRoche}, la
 	cual se puede aplicar a fenómenos de alta \quotes{condensación central}
-	\citetbookchapter{kopal_close_binary_systems_1959}{III}.
+	(\citetbookchapter{kopal_close_binary_systems_1959}{III}).
 \end{description}
 
 \subsection{Generalización a Órbitas Excéntricas y Asincrónicas}
@@ -352,7 +352,7 @@ $\Omega$ definido hasta ahora solo puede ser aplicado a aquellos sistemas
 binarios cuya órbita es circular y sincrónica. Esto excluye los sistemas con
 órbitas excéntricas y/o asincrónicas, incluyendo sistemas binarios en contacto
 cuyas propiedades no pueden ser adecuadamente modeladas en este paradigma
-[\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}].
+(\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}).
 \citeyearparen{wilson_eccentric_1979} generaliza el modelo de Roche a este tipo de
 órbitas, llegando a la siguiente expresión:
 
@@ -573,12 +573,12 @@ vista, o con un telescopio demasiado débil para el trabajo.
 	orbital relativo en el plano del cielo,} aunque esto se puede superar usando
 	el hecho de que la estrella primaria aparentemente inmóvil debe de estar
 	presente \quotes{en un punto focal de la órbita relativa.}
-	\citetbookchapter{fundamentalAstronomy}{10}
+	(\citetbookchapter{fundamentalAstronomy}{10})
 
 	\item[Binarias espectroscópicas -] presentan variaciones periódicas en sus
 	espectros, en donde las líneas espectrales detectadas \quotes{oscilan
 	periodicamente alrededor de la longitud de onda promedio}
-	\citetbookchapter{astronomyPhysicalPerspective}{5}. Esto se observa debido
+	(\citetbookchapter{astronomyPhysicalPerspective}{5}). Esto se observa debido
 	al \textit{desplazamiento de Doppler}, lo cual causa que la frecuencia de un
 	fotón se recorra hacia frecuencias más pequeñas (azules) o más grandes
 	(rojas) dependiendo de su velocidad radial con respecto al observador, si se
@@ -621,7 +621,7 @@ mostrando variabilidad despreciable en casos de variabilidad elipsoidal (en el
 caso que las componentes no sean esferas perfectas debido a una leve distorsión
 por el potencial gravitacional) o en caso del calentamiento superficial de una
 componente por la radiación incidente de su compañera
-\citeyearparen{samus_gcvs_variable_types_2016}. Existen sistemas con un rango amplio
+(\citeyearparen{samus_gcvs_variable_types_2016}). Existen sistemas con un rango amplio
 de periodos orbitales, desde 4 horas hasta más de 25 años. Una curva de luz
 típica de un sistema \textit{EA} se puede apreciar en la
 \reffigure{figuraEACurvaLuz}.
@@ -635,7 +635,7 @@ típica de un sistema \textit{EA} se puede apreciar en la
 	\label{figuraEACurvaLuz}
 \end{figure}
 
-\subsection{EB - \textbeta \ Lyrae}
+\subsection{EB - Beta Lyrae}
 
 En el caso de un sistema eclipsante semi-separado, la curva de luz observada se
 le clasifica como tipo \textit{EB}, o de tipo \textbeta \space Lyrae. En un sistema
@@ -647,7 +647,7 @@ una estrella esférica, esta área es constante en el tiempo, pero en el caso de
 una estrella elipsoidal la cantidad de área observada depende de la fase orbital
 actual. Esto resulta en eclipses sin un comienzo y fin claramente delimitados.
 En la mayoría de los casos el periodo orbital de este tipo de sistemas es mayor
-de 1 día \citeyearparen{samus_gcvs_variable_types_2016}. 
+de 1 día. (\citeyearparen{samus_gcvs_variable_types_2016}) 
 
 \begin{figure}[!ht]
 	\centering
@@ -667,7 +667,7 @@ sistemas semi-separados, ambas componentes de sistemas tipo \textit{EW} están
 altamente acopladas una a otra, la diferencia de temperaturas siendo del orden
 de cientos de Kelvin\textemdash lo cual es evidente por la profundidad de ambos
 eclipses\textemdash de tipo espectral A-K
-\citeyearparen{skelton_modelling_wuma_variable_stars_2009}. El periodo orbital es
+(\citeyearparen{skelton_modelling_wuma_variable_stars_2009}). El periodo orbital es
 menor de 1 día, del orden de unas cuantas horas, debido a su corta aproximación
 física. La envoltura común que comparten las estrellas es de una forma
 irregular; esta consiste de las superficies elipsoidales de las estrellas y del
@@ -685,13 +685,12 @@ viendo una cantidad similar de superficie estelar. Este fenómeno observacional
 es denominado el \textit{efecto O'Connell}. A pesar de que aún no es muy bien
 entendido la causa de este efecto, una de las interpretaciones más populares en
 la literatura es la presencia de manchas estelares
-[\citeyearparen{ding_fast_derivation_cbs_params_2022}
-\citeyearparen{michel_photometric_study_contact_binary_2023}
-\citeyearparen{michel_rotse1_new_wuma_eclipsing_binary_2016}], las cuales al ser más
-frías que el resto de la superficie llega a manifestar como una menor cantidad
-de radiación emitida por el sistema en ciertas fases. Esto se atribuye a la
-actividad magnética de la estrella, y se utiliza principalmente al momento de
-ajustar un modelo computacional a la curva de luz observada.
+(\textcites{ding_fast_derivation_cbs_params_2022,michel_photometric_study_contact_binary_2023,michel_rotse1_new_wuma_eclipsing_binary_2016}),
+las cuales al ser más frías que el resto de la superficie llega a manifestar
+como una menor cantidad de radiación emitida por el sistema en ciertas fases.
+Esto se atribuye a la actividad magnética de la estrella, y se utiliza
+principalmente al momento de ajustar un modelo computacional a la curva de luz
+observada.
 
 \begin{figure}[!ht]
 	\centering
